--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   image_picker: 0.6.7+22
   story_view: ^0.12.0
   flutter_calendar_carousel: ^1.5.3
+  flutter_flexible_toast: ^0.1.4
+  jitsi_meet: ^2.1.0
 
 dev_dependencies:
   flutter_test:
